@startuml

title __NETWORK's Class Diagram__\n

  namespace no.ntnu.idi.apollo69server {
    namespace network {
      class no.ntnu.idi.apollo69server.network.BasePlayerConnectionListener {
          + connected()
          + connected()
          + disconnected()
          + disconnected()
          + idle()
          + idle()
          + received()
          + received()
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69server {
    namespace network {
      class no.ntnu.idi.apollo69server.network.MatchmakingServer {
          {static} + MAX_GAME_SERVERS : int
          {static} + MAX_PLAYERS : int
          - connections : List<PlayerConnection>
          - gameEngineList : List<GameEngine>
          - gameEngineThreadGroup : ThreadGroup
          - server : Server
          - tcpPort : int
          - udpPort : int
          + MatchmakingServer()
          + run()
          + stop()
          ~ addGameServer()
          ~ getAvailableGameServer()
          ~ removeEmptyGameServers()
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69server {
    namespace network {
      interface no.ntnu.idi.apollo69server.network.MessageHandler {
          {abstract} + handle()
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69server {
    namespace network {
      class no.ntnu.idi.apollo69server.network.MessageHandlerDelegator {
          - handlers : Map<Class, MessageHandler>
          + handleMessage()
          + registerHandler()
          + unregisterHandler()
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69server {
    namespace network {
      class no.ntnu.idi.apollo69server.network.PlayerConnection {
          - deviceId : String
          + getDeviceId()
          + setDeviceId()
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69server {
    namespace network {
      class no.ntnu.idi.apollo69server.network.PlayerConnectionListener {
          - connections : List<PlayerConnection>
          - waitingConnections : List<PlayerConnection>
          + PlayerConnectionListener()
          + connected()
          + disconnected()
          + idle()
          + received()
          - matchmakeQueue()
      }
    }
  }
  

  no.ntnu.idi.apollo69server.network.BasePlayerConnectionListener -up-|> com.esotericsoftware.kryonet.Listener
  no.ntnu.idi.apollo69server.network.MatchmakingServer .up.|> java.lang.Runnable
  no.ntnu.idi.apollo69server.network.MatchmakingServer o-- no.ntnu.idi.apollo69server.network.MessageHandlerDelegator : messageHandlerDelegator
  no.ntnu.idi.apollo69server.network.PlayerConnection -up-|> com.esotericsoftware.kryonet.Connection
  no.ntnu.idi.apollo69server.network.PlayerConnectionListener -up-|> no.ntnu.idi.apollo69server.network.BasePlayerConnectionListener
  no.ntnu.idi.apollo69server.network.PlayerConnectionListener o-- no.ntnu.idi.apollo69server.network.MessageHandlerDelegator : handlerDelegator
  no.ntnu.idi.apollo69server.network.PlayerConnectionListener o-- no.ntnu.idi.apollo69server.network.MatchmakingServer : matchmakingServer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
